<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_recipe_icon"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/recipe_icon"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/icon_background" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/iv_recipe_icon">

                <Button
                    android:id="@+id/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#99FFFFFF"
                    android:text="@string/button_ingredients"
                    android:textColor="#424242" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#99FFFFFF"
                    android:text="@string/button_step"
                    android:textColor="#424242" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_recipe_name"
                    app:layout_constraintEnd_toEndOf="@+id/tv_recipe_name"
                    app:layout_constraintStart_toStartOf="@+id/tv_recipe_name" />

            </LinearLayout>

            <TextView
                android:id="@+id/number_of_servings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/h3"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintStart_toStartOf="@+id/tv_recipe_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name"
                tools:text="8">

            </TextView>

            <TextView
                android:id="@+id/tv_recipe_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#000000"
                android:shadowRadius="10"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/h1"
                app:layout_constraintBottom_toBottomOf="@+id/iv_recipe_icon"
                app:layout_constraintEnd_toEndOf="@+id/iv_recipe_icon"
                app:layout_constraintStart_toStartOf="@+id/iv_recipe_icon"
                app:layout_constraintTop_toTopOf="@+id/iv_recipe_icon"
                app:layout_constraintVertical_bias="0.25"
                tools:text="Nutella Pie" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="@+id/tv_recipe_name"
                app:layout_constraintStart_toStartOf="@+id/tv_recipe_name" />

            <View
                android:id="@+id/view"
                android:layout_width="100dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/tv_recipe_name"
                app:layout_constraintEnd_toEndOf="@+id/tv_recipe_name"
                app:layout_constraintStart_toStartOf="@+id/tv_recipe_name" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>