...
        android:layout_marginBottom="@dimen/margin_medium"
        android:background="@color/colorAccent"
        android:drawableStart="@drawable/arrow_back"
        android:text="@string/previous_step"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_next_step"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_next_step"
        android:layout_width="0dp"
...
